--- a/lectures/week-2/index.html
+++ b/lectures/week-2/index.html
@@ -650,7 +650,12 @@
             </ul>
         </ul>
 
+        Another useful thing to know is that you can set the width and height by using styles without using the tag attributes however, specifying the width and height with the attributes helps allocate the space on the webpage correctly so that content doesn't have to shift around after the styles get applied at the end.
+        <br>
+        <br>
+
         Be careful when setting width and height. What looks good on a smaller window might look terrible on a larger one.
+        <br>
 
         <br>
         <br>
