--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             Not sure where to start? Click this link and download a template HTML File
         </a>
         <a href="https://ed.fnal.gov/lincon/tech_web_naming.shtml" target="_blank" class="list-group-item list-group-item-action">File Naming Conventions</a>
+        <a href="https://www.shopify.com/partners/blog/79940998-15-funny-lorem-ipsum-generators-to-shake-up-your-design-mockups" target="_blank" class="list-group-item list-group-item-action">Fun Lorem Ipsum Generators</a>
+
     </div>
 
     <br>
