--- a/lectures/week-3/index.html
+++ b/lectures/week-3/index.html
@@ -20,6 +20,7 @@
         fetch('../nav.html')
             .then(response => response.text())
             .then(text => document.getElementById('#nav').innerHTML = text);
+
     </script>
 
     <h1 class="row justify-content-center" style="padding-top: 100px;">
@@ -242,9 +243,6 @@ p {
         <br>
         <br>
         Without a &lt;div&gt; the webpage is essentially what is containing all of our code which is as big as we make it. If we just add some element such as &lt;p&gt;, the content will fill up the web page as much as possible unless we force it onto a new line using &lt;br&gt;.
-        <br>
-        <br>
-        Maybe we only want the
         <br>
         <br>
         Consider the below code text. Maybe we only want it to take up a small portion of the screen.
@@ -518,4 +516,6 @@ img {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-</body></html>
+</body>
+
+</html>
