--- a/lectures/week-3/index.html
+++ b/lectures/week-3/index.html
@@ -20,7 +20,6 @@
         fetch('../nav.html')
             .then(response => response.text())
             .then(text => document.getElementById('#nav').innerHTML = text);
-
     </script>
 
     <h1 class="row justify-content-center" style="padding-top: 100px;">
@@ -255,7 +254,7 @@ p {
     </pre>
 
     <h4>
-        We can wrap it with a div and change the size of the div to be smaller. The contents of the &lt;p&gt; will conform base on the size of the &lt;div&gt;.
+        We can wrap it with a div and change the size of the div to be smaller. The contents of the &lt;p&gt; will conform based on the size of the &lt;div&gt;.
     </h4>
     <div style="width: 25%">
         <p>Supercallifragilisticespialidocious Supercallifragilisticespialidocious Supercallifragilisticespialidocious Supercallifragilisticespialidocious Supercallifragilisticespialidocious Supercallifragilisticespialidocious Supercallifragilisticespialidocious</p>
@@ -499,6 +498,10 @@ img {
         <a href=" hw/index.html" target="_blank">Example</a>
     </h4>
     <br>
+    <div style="text-align: center">
+        <iframe src="https://adverlevel-content.s3.amazonaws.com/adverlevels-bricks-n-balls-development-master/bricks-n-balls-development-default-mraid/index.html" width=405 height=720></iframe>
+    </div>
+
 
     <h2>
         Readings Due Next Week
@@ -509,6 +512,8 @@ img {
         Chapters 10, 13, 15 (375-376) HTML & CSS Jon Duckett
     </h4>
 
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -516,6 +521,4 @@ img {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-</body>
-
-</html>
+</body></html>
