- fix week 3 having content it wasn't supposed to have

--- a/lectures/week-3/index.html
+++ b/lectures/week-3/index.html
@@ -20,6 +20,7 @@
         fetch('../nav.html')
             .then(response => response.text())
             .then(text => document.getElementById('#nav').innerHTML = text);
+
     </script>
 
     <h1 class="row justify-content-center" style="padding-top: 100px;">
@@ -498,10 +499,6 @@ img {
         <a href=" hw/index.html" target="_blank">Example</a>
     </h4>
     <br>
-    <div style="text-align: center">
-        <iframe src="https://adverlevel-content.s3.amazonaws.com/adverlevels-bricks-n-balls-development-master/bricks-n-balls-development-default-mraid/index.html" width=405 height=720></iframe>
-    </div>
-
 
     <h2>
         Readings Due Next Week
@@ -521,4 +518,6 @@ img {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-</body></html>
+</body>
+
+</html>
