--- a/lectures/week-4/index.html
+++ b/lectures/week-4/index.html
@@ -20,6 +20,7 @@
         fetch('../nav.html')
             .then(response => response.text())
             .then(text => document.getElementById('#nav').innerHTML = text);
+
     </script>
 
     <h1 class="row justify-content-center" style="padding-top: 100px;">
@@ -63,7 +64,7 @@
         At first glance it looks like legitimate text however, it's literal gibberish.
         <br>
         <br>
-        The intent is to give an idea what the site will look like when it has actual content in it. You could copy and paste something a bunch, but that might not give the best reflection given the same series of characters would have the same allocation and space which isn't as good as something that's random yet feels real.
+        The intent is to give an idea what the site will look like when it has actual content in it. You could copy and paste something a bunch, but that might not give the best reflection given the same series of characters would have the same allocation of space which isn't as good as something that's random yet feels real.
         <br>
         <br>
         If you want to get creative though, there are some fun generators out there. My personal favorite being the <a href="https://slipsum.com/" target="_blank">Samuel L. Ipsum</a> generator. Check out Handy Links on the homepage for a link to a list of other fun generators.
@@ -640,4 +641,6 @@ h4.right {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-</body></html>
+</body>
+
+</html>
