- part of previous commit

--- a/lectures/week-7/index.html
+++ b/lectures/week-7/index.html
@@ -504,7 +504,9 @@
 
     <hr>
     <h4>
-        None :)
+        Chapter 2, 3 Javascript & JQuery Jon Duckett
+        <br>
+        (Optional) Chapter 1 Javascript & JQuery Jon Duckett
     </h4>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
