- week 7 fix calculate button not working

--- a/lectures/week-7/index.html
+++ b/lectures/week-7/index.html
@@ -232,7 +232,7 @@
     </h4>
 
     <script>
-        document.body.innerHTML += '<h4>' + (235 / 6) + '</h4>';
+        document.write('<h4>' + (235 / 6) + '</h4>');
     </script>
 
     <h4>
