--- a/lectures/week-7/examples/example-1.html
+++ b/lectures/week-7/examples/example-1.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Homepage</title>
+    <title>Example 1</title>
 
 </head>
 
